@@ -55,8 +55,8 @@ define( function( require ) {
     this.backgroundStrokeWidth = 2;
     var backgroundNode = new Rectangle( 0, 0, options.size.width, options.size.height, {
       fill: new LinearGradient( 0, 0, 0, options.size.height )
-        .addColorStop( 0, PHScaleColors.OH )
-        .addColorStop( 1, PHScaleColors.H3O ),
+        .addColorStop( 0, PHScaleColors.BASIC )
+        .addColorStop( 1, PHScaleColors.ACIDIC ),
       stroke: 'black',
       lineWidth: this.backgroundStrokeWidth
     } );
